@@ -1,3 +1,8 @@
+2010-08-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (match_template): Move the first i.error
+	out of the loop.
+
 2010-08-04  Alan Modra  <amodra@gmail.com>
 
 	* configure.tgt (m32c): Set endian=little.
